--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -10,6 +10,11 @@
         </div>
       </div>
       <div class="col-sm-10">
+          @if(flash.containsKey("Success")){
+              <div class="alert alert-success">
+                  @flash.get("success")
+              </div>
+          }
         <table class="table table-bordered table-hover table-condensed">
           <thead>
           <!-- The header row-->
@@ -35,6 +40,11 @@
 					} <!-- End of For loop -->
           </tbody>
         </table>
+        <p>
+            <a href="@routes.HomeController.addProduct()">
+                <button class="btn btn-primary">Add a Product</button>
+            </a>
+        </p>
       </div>
   </div>
   <!-- End of content for main -->
