--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -36,6 +36,11 @@
               <td>@p.getDescription</td>
               <td>@p.getStock</td>
               <td>&euro; @("%.2f".format(p.getPrice))</td>
+              <td>
+                <a href="@routes.HomeController.deleteProduct(p.getId)" class="btn-xs btn-danger" onclick="return confirmDel();">
+                  <span class="glyphicon glyphicon-trash"></span>
+                <a>
+              </td>
 					</tr>
 					} <!-- End of For loop -->
           </tbody>
@@ -47,5 +52,11 @@
         </p>
       </div>
   </div>
+
+  <script>
+    function confirmDel(){
+      return confirm('Are you sure?');
+    }
+  </script>
   <!-- End of content for main -->
 }
